force-app/main/default/objects/WOHI_Collaboration__c/WOHI_Collaboration__c.object-meta.xml
<CustomObject>
    <label>WOHI-Collaboration</label>
    <nameField>
        <displayFormat>WC-{000}</displayFormat>
        <label>WOHI-Collaboration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOHI-Collaboration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>