force-app/main/default/objects/WOHI_Collaboration__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <label>Application Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stages</valueSetName>
    </valueSet>
</CustomField>