force-app/main/default/objects/WOHI_Collaboration__c/fields/City_Town__c.field-meta.xml
<CustomField>
    <fullName>City_Town__c</fullName>
    <label>City/Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>