force-app/main/default/objects/WOHI_Collaboration__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <label>Current Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>