force-app/main/default/objects/WOHI_Collaboration__c/fields/Expected_outcome_from_each_visit__c.field-meta.xml
<CustomField>
    <fullName>Expected_outcome_from_each_visit__c</fullName>
    <inlineHelpText>Expected outcome from each visit. How does it fit with overall Project milestone</inlineHelpText>
    <label>Expected outcome from each visit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>