force-app/main/default/objects/WOHI_Collaboration__c/fields/Experience_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Months__c</fullName>
    <label>Experience in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>