force-app/main/default/objects/WOHI_Collaboration__c/fields/Extent_and_nature_of_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Extent_and_nature_of_Collaborator__c</fullName>
    <label>Extent and nature of Collaborator</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>