force-app/main/default/objects/WOHI_Collaboration__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>TRIM(
IF(ISBLANK(TEXT(Title__c)), &quot;&quot;, TEXT(Title__c) &amp; &quot; &quot;) &amp;
IF(ISBLANK(FirstName__c), &quot;&quot;, FirstName__c&amp; &quot; &quot;) &amp;
BLANKVALUE(Last_Name__c, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>