force-app/main/default/objects/WOHI_Collaboration__c/fields/Notify_through_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_through_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify through Email</label>
    <type>Checkbox</type>
</CustomField>