force-app/main/default/objects/WOHI_Collaboration__c/fields/Re_Notify_Count__c.field-meta.xml
<CustomField>
    <fullName>Re_Notify_Count__c</fullName>
    <label>Re-Notify Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>