force-app/main/default/objects/WOHI_Collaboration__c/fields/Scientific_Justification_for_WOHI_lab__c.field-meta.xml
<CustomField>
    <fullName>Scientific_Justification_for_WOHI_lab__c</fullName>
    <inlineHelpText>Scientific Justification for the choice of the WOHI laboratory/ group</inlineHelpText>
    <label>Scientific Justification for WOHI lab</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>