force-app/main/default/objects/WOHI_Collaboration__c/fields/TelephoneNo__c.field-meta.xml
<CustomField>
    <fullName>TelephoneNo__c</fullName>
    <label>Telephone No.</label>
    <type>Phone</type>
</CustomField>