force-app/main/default/objects/WOHI_Collaboration__c/fields/Will_the_collaboration_require_MTA__c.field-meta.xml
<CustomField>
    <fullName>Will_the_collaboration_require_MTA__c</fullName>
    <inlineHelpText>Will the collaboration require Material Transfer Agreement(MTA)?</inlineHelpText>
    <label>Will the collaboration require Material</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>