force-app/main/default/objects/WOHI_Collaboration__c/fields/Wohi_User_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Wohi_User_Document_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wohi User Document Status</label>
    <type>Checkbox</type>
</CustomField>