force-app/main/default/objects/WOHI_Collaboration__c/fields/Years_of_Experience_as_independent_PI__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience_as_independent_PI__c</fullName>
    <label>Years of Experience as independent PI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>