force-app/main/default/objects/WOHI_Collaboration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Applicant_Proposal_Association__c</columns>
    <columns>Current_Position__c</columns>
    <columns>Email__c</columns>
    <columns>Organisation__c</columns>
    <columns>Type__c</columns>
    <columns>Years_of_Experience_as_independent_PI__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>